--- a/css/desktop.css
+++ b/css/desktop.css
@@ -14,7 +14,8 @@
 
 	#side {
 		height: 100%;
-		width: 250px;
+		/*width: 250px;*/
+		width: auto;
 		display: flex;
 		flex-direction: column;
 		background-color: #939495;
@@ -31,12 +32,14 @@
 		align-items: center;
 		background-color: white;
 		height: 75px;
-		width: 250px;
+		/*width: 250px;*/
+		width: auto;
 	}
 
 	#nav {
 		height: 100%;
-		width: 242px;
+		/*width: 242px;*/
+		width: auto;
 		display: flex;
 		border: 4px solid #a33038;
 		overflow-y:auto;
@@ -73,7 +76,8 @@
 	{
 		margin-top: 1px;
 		padding: 0 0 0 30px;
-		width: 250px;
+		/*width: 250px;*/
+		width: 100%;
 	}
 
 		li 
@@ -116,7 +120,8 @@
 			z-index: 2;
 			cursor: pointer;
 			height: 1em;
-			width: 250px;
+			/*width: 250px;*/
+			width: 100%;
 			top: 0;
 			height: 24px;
 		}
@@ -139,13 +144,9 @@
 			background-color: #f42941;
 			height: 24px;
 			font-size: 21px;
-			border-left: black solid 5px;
+			border-left: black solid 4px;
 			overflow: hidden;
 		  	white-space: nowrap;
-		}
-		li input:checked + label
-		{
-			background-color: #a33038;
 		}
 		li input:checked + ol
 		{
@@ -156,6 +157,6 @@
 			height: auto;
 		}
 			li input:checked + ol > li { display: block; margin: 0 0 0.125em;  /* 2px */}
-			li input:checked + ol {border-left: black solid 5px;}
+			li input:checked + ol {border-left: black solid 4px;}
 			li input:checked + ol > li:last-child { margin: 0 0 0.063em; /* 1px */ }
 	}
