--- a/dropbox/css/fonts.css
+++ b/dropbox/css/fonts.css
@@ -6,15 +6,22 @@
 }
 
 @font-face {
-    font-family: "Axis Roman";
+    font-family: "Avenir Roman";
     src: url("AvenirLTStd-Roman.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "Axis Light";
+    font-family: "Avenir Light";
     src: url("AvenirLTStd-Light.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Avenir Medium";
+    src: url("Avenir-Medium.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
