--- a/dropbox/css/style.css
+++ b/dropbox/css/style.css
@@ -11,6 +11,42 @@ body {
     overflow-y: hidden;
 }
 
+.loading {
+	font-family: "Avenir Medium";
+	position: fixed;
+	height: 100px;
+	width: 150px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	border: 3px solid #939495;
+	display: none;
+	background-color: white;
+}
+
+.loading:after {
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  -webkit-animation: ellipsis steps(4,end) 900ms infinite;      
+  animation: ellipsis steps(4,end) 900ms infinite;
+  content: "\2026"; /* ascii code for the ellipsis character */
+  width: 0px;
+}
+
+@keyframes ellipsis {
+  to {
+    width: 1.25em;    
+  }
+}
+
+@-webkit-keyframes ellipsis {
+  to {
+    width: 1.25em;    
+  }
+}
+
 #login {
 	font-family: "Avenir Medium";
 	position: fixed;
